Streamline Lab 3: Remove Known Issues and condense Summary
Removed Known Issues section:
- Moved technical issues to main Dynamo repo documentation
- Students don't need troubleshooting details in learning lab
- Cleaner focus on core concepts

Shortened Summary section:
- From 90+ lines to 15 concise lines
- Focus on key learning: distributed vs disaggregated architecture
- Clear architectural choice guidance
- Direct next steps without excessive detail
- Removed repetitive bullet points and subsections

Result: More focused conclusion that reinforces the main learning
objectives without overwhelming students with edge cases

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ef1eb09",
+   "id": "9007f7a9",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88efbb33",
+   "id": "a1d55fb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d6505b3",
+   "id": "ab5b15c9",
    "metadata": {},
    "source": [
     "---\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8a01ee",
+   "id": "296b6727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd8b985a",
+   "id": "8fa0b79b",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d068857a",
+   "id": "69a54c8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c0fa7bf",
+   "id": "3eda92ba",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d7a3e18",
+   "id": "b028dbbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a663eb8",
+   "id": "6eca6114",
    "metadata": {},
    "source": [
     "---\n",
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18221eb6",
+   "id": "e556965e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad724ab",
+   "id": "08ed538f",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a1180c2",
+   "id": "381319e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e499aa1",
+   "id": "9deee3e8",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cbf2bc5",
+   "id": "5e0987a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9700c7a0",
+   "id": "73aa7086",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf91624",
+   "id": "c25c2596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55773bab",
+   "id": "d378df11",
    "metadata": {},
    "source": [
     "---\n",
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80241382",
+   "id": "cc68d40f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e9eb93",
+   "id": "8d8b93ed",
    "metadata": {},
    "source": [
     "### Step 2: Test Distributed Dynamo with Traffic\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c22a46d",
+   "id": "d9183b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d1d412e",
+   "id": "089cf6f0",
    "metadata": {},
    "source": [
     "---\n",
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18e66b2c",
+   "id": "08e16559",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e69ad3",
+   "id": "bc59a299",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4298944",
+   "id": "ffbc05f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b69a4fa",
+   "id": "23973a8d",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d94d39b7",
+   "id": "c62df67e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,100 +820,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ca8c04c",
+   "id": "1881ea55",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Known Issues (v0.8.0 Distributed Serving)\n",
-    "\n",
-    "**⚠️ Distributed Deployment Issues:**\n",
-    "\n",
-    "1. **K8s-native Discovery Propagation**: EndpointSlices may take 5-15 seconds to propagate in large clusters (20+ nodes). First requests may fail with \"no available workers\" until discovery completes.\n",
-    "\n",
-    "2. **NIXL KV Cache Transfer on ARM**: RDMA support on ARM-based nodes (Graviton, Ampere) is experimental in v0.8.0. Fall back to TCP transport if encountering issues.\n",
-    "\n",
-    "3. **Multi-Frontend KV-Aware Routing**: In some edge cases with >10 frontend replicas, routing metadata may be stale for 1-2 seconds, resulting in suboptimal cache hits (not failures, just less efficient).\n",
-    "\n",
-    "4. **NATS/etcd Compatibility**: If mixing K8s-native and NATS/etcd modes in the same cluster, ensure workers use consistent discovery method. Mixed modes are not supported.\n",
-    "\n",
-    "5. **Worker Gang Scheduling**: In v0.8.0, workers must all be ready before accepting traffic. If one worker pod fails, the entire deployment may be blocked. Use `kubectl describe dynamographdeployment` to debug.\n",
-    "\n",
-    "**Workarounds:**\n",
-    "- Discovery delays: Add `--wait-for-workers-timeout=30s` flag to frontend\n",
-    "- NIXL issues: Set `NIXL_TRANSPORT=tcp` env var to force TCP mode\n",
-    "- Routing staleness: Reduce frontend replicas to 3-5 for optimal cache awareness\n",
-    "- Gang scheduling: Use pod disruption budgets and ensure adequate node resources\n",
-    "\n",
-    "**Migration from v0.7.x:**\n",
-    "- K8s-native discovery is backward compatible\n",
-    "- Existing NATS/etcd deployments continue to work\n",
-    "- Can upgrade in-place, but test K8s-native in staging first\n",
-    "\n",
-    "---\n",
-    "\n",
     "## Summary\n",
     "\n",
-    "### What You Learned\n",
+    "You've deployed a distributed Dynamo architecture where multiple workers collaborate to serve requests. Unlike Lab 1's disaggregated approach (specialized prefill/decode workers), this distributed model uses identical workers that share cached computations over the network via NIXL.\n",
     "\n",
-    "- ✅ Distributed Dynamo architecture with K8s-native discovery\n",
-    "- ✅ Difference between Grove (operator) and Dynamo (serving framework)\n",
-    "- ✅ Deploying distributed Dynamo with multiple workers\n",
-    "- ✅ Creating a distributed deployment with KV-aware routing\n",
-    "- ✅ Monitoring distributed Dynamo metrics with Grafana\n",
-    "- ✅ Understanding NIXL for KV cache data transfer between workers\n",
-    "- ✅ Trade-offs between single-node and multi-node setups\n",
-    "- ✅ When to consider NATS/etcd for extreme scale (Appendix A & B)\n",
+    "**What makes this powerful:**\n",
+    "- Workers discover each other automatically through Kubernetes\n",
+    "- KV cache sharing speeds up similar or follow-up requests\n",
+    "- Scales horizontally—add more workers for more traffic\n",
+    "- Works on single nodes with multiple GPUs or across multi-node clusters\n",
     "\n",
-    "### Key Takeaways\n",
+    "**Key architectural choice:**\n",
+    "- Use **disaggregated serving** (Lab 1) for predictable latency on individual requests\n",
+    "- Use **distributed serving** (Lab 3) when you have high traffic with cache-friendly patterns\n",
     "\n",
-    "**Architecture Clarity**:\n",
-    "- **Grove**: Kubernetes Operator (orchestrates Dynamo deployments)\n",
-    "- **Dynamo**: Inference serving framework (does the actual work)\n",
-    "- **K8s-native Discovery**: EndpointSlices for worker discovery (v0.8.0+)\n",
-    "- **NIXL**: Transfers actual KV cache data (gigabytes via RDMA/TCP/SSD)\n",
-    "\n",
-    "**Distributed Dynamo is Powerful**:\n",
-    "- Enables KV-aware routing (even on single node with multiple GPUs)\n",
-    "- NIXL transfers cache data efficiently between workers\n",
-    "- Improves cache hit rates and throughput\n",
-    "- Essential for production scale-out scenarios\n",
-    "\n",
-    "**Benefits of K8s-Native (v0.8.0+)**:\n",
-    "- Simpler deployment (no NATS/etcd required)\n",
-    "- Lower latency (direct TCP connections)\n",
-    "- Fewer moving parts to maintain\n",
-    "- Built-in Kubernetes service discovery\n",
-    "\n",
-    "**Production Considerations**:\n",
-    "- Use distributed Dynamo when scaling beyond single GPU\n",
-    "- Monitor worker metrics for health and utilization\n",
-    "- Plan for network latency between nodes in multi-node setups\n",
-    "- Consider cache hit patterns for your workload\n",
-    "- NATS/etcd optional for extreme scale (see Appendix A)\n",
-    "\n",
-    "### Real-World Applications\n",
-    "\n",
-    "**When Companies Use Distributed Dynamo**:\n",
-    "- Multi-region LLM deployments\n",
-    "- High-traffic serving (1000+ RPS)\n",
-    "- Multi-GPU and multi-node clusters\n",
-    "- Cost optimization (share expensive cache computation)\n",
-    "- Enterprise multi-tenant platforms\n",
-    "\n",
-    "**Deployment Options**:\n",
-    "- **Single GPU**: No distributed coordination needed\n",
-    "- **Multiple GPUs, single node**: Distributed Dynamo with KV-aware routing beneficial\n",
-    "- **Small clusters**: K8s-native discovery (simple, effective)\n",
-    "- **Large clusters**: K8s-native for most; NATS/etcd for extreme scale\n",
-    "\n",
-    "### Next Steps\n",
-    "\n",
-    "- **Experiment**: Try different worker replica counts to see KV-aware routing\n",
-    "- **Monitor**: Watch Dynamo metrics dashboards during traffic\n",
-    "- **Scale**: If you have access to multi-node clusters, test distributed benefits\n",
-    "- **Learn**: Understand NIXL for KV cache data transfer in Dynamo docs\n",
-    "- **Explore**: Review Appendix A & B if you need NATS/etcd for extreme scale\n",
+    "**Next steps:** Experiment with different worker counts, monitor cache hit rates in Grafana, or explore the optional NATS/etcd setup in Appendix B for extreme-scale deployments.\n",
     "\n",
     "---\n",
     "\n",
@@ -925,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84e37adf",
+   "id": "de73c869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f217c5",
+   "id": "7e719f2c",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -957,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc48e357",
+   "id": "d662a5cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f01efaf",
+   "id": "1175ec74",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -990,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c95f86d4",
+   "id": "6a44eb65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70670e09",
+   "id": "546a662a",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1155,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1621809",
+   "id": "af327581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f4523e0",
+   "id": "09ed8bce",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1201,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b802a8f2",
+   "id": "c01864ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cc35e52",
+   "id": "02a18a3d",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1244,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1902f5fa",
+   "id": "131429d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473770bc",
+   "id": "be80df1d",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1288,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4559c40e",
+   "id": "b86863c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2558c983",
+   "id": "30d90c78",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1349,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3293371a",
+   "id": "7664aea5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f0b3505",
+   "id": "31924142",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
