--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -1668,6 +1668,9 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
