Remove unsubstantiated performance claims from Lab 3
- Removed specific metrics: 50% reduction, 5-10x faster, 60% improvement
- Removed made-up performance table with specific numbers (+10-20%, +2-5ms, etc.)
- Kept qualitative descriptions (faster, reduced latency) without specific claims
- Updated README to remove 5-10x faster claim
- All performance claims now describe expected behavior without unsupported metrics

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da45a4c9",
+   "id": "1066f3f0",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
@@ -28,7 +28,7 @@
     "8. Worker 1 reuses cached prefill blocks → much faster TTFT!\n",
     "\n",
     "**Why This Matters:**\n",
-    "When users ask variations of similar questions, the router intelligently directs requests to workers that have already cached related computations. This avoids redundant prefill work and can reduce TTFT by 50% or more for cache-friendly workloads.\n",
+    "When users ask variations of similar questions, the router intelligently directs requests to workers that have already cached related computations. This avoids redundant prefill work and reduces time-to-first-token for cache-friendly workloads.\n",
     "\n",
     "**How this differs from Lab 1:**\n",
     "- **Lab 1**: Disaggregated serving (specialized prefill → decode workers)\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ee8e2b",
+   "id": "e9a56c92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "510cd4f1",
+   "id": "65ee1f46",
    "metadata": {},
    "source": [
     "### Why NATS is Required\n",
@@ -195,32 +195,25 @@
     "\n",
     "**Without KV-Aware Routing (Round-Robin):**\n",
     "```\n",
-    "Request 1: \"Explain AI\" → Worker 1 (cache miss, slow TTFT)\n",
-    "Request 2: \"Explain AI in detail\" → Worker 2 (cache miss, slow TTFT)\n",
-    "Request 3: \"Explain AI simply\" → Worker 3 (cache miss, slow TTFT)\n",
-    "Average TTFT: 500ms\n",
+    "Request 1: \"Explain AI\" → Worker 1 (cache miss)\n",
+    "Request 2: \"Explain AI in detail\" → Worker 2 (cache miss)\n",
+    "Request 3: \"Explain AI simply\" → Worker 1 (cache miss)\n",
+    "All requests experience full prefill computation\n",
     "```\n",
     "\n",
     "**With KV-Aware Routing:**\n",
     "```\n",
-    "Request 1: \"Explain AI\" → Worker 1 (cache miss, slow TTFT: 500ms)\n",
-    "Request 2: \"Explain AI in detail\" → Worker 1 (cache hit, fast TTFT: 50ms)\n",
-    "Request 3: \"Explain AI simply\" → Worker 1 (cache hit, fast TTFT: 50ms)\n",
-    "Average TTFT: 200ms (60% improvement!)\n",
+    "Request 1: \"Explain AI\" → Worker 1 (cache miss)\n",
+    "Request 2: \"Explain AI in detail\" → Worker 1 (cache hit - same worker)\n",
+    "Request 3: \"Explain AI simply\" → Worker 1 (cache hit - same worker)\n",
+    "Requests 2-3 reuse cached prefill computation from Request 1\n",
     "```\n",
-    "- In K8s-native mode: Routing metadata shared via API or direct communication\n",
-    "- In NATS mode: NATS shares metadata about cache state\n",
-    "- Enables intelligent request routing to workers with relevant cached data\n",
-    "- Dramatically reduces prefill latency when cache hits occur\n",
     "\n",
-    "**Optional NATS/etcd (for extreme scale)**: Advanced coordination:\n",
-    "- **NATS**: Pub/sub messaging for metadata (cache events, routing tables)\n",
-    "- **etcd**: Distributed configuration and service discovery\n",
-    "- **When to use**: Very large clusters, multi-region, custom routing policies\n",
-    "- **Note**: NATS does NOT transfer KV cache data (NIXL does that)\n",
-    "- Router directs requests to workers with relevant cached prefixes\n",
-    "- Improves cache hit rates even on single node with multiple GPUs\n",
-    "- Workers transfer actual cache data via NIXL when needed\n",
+    "**How NATS Enables This:**\n",
+    "- Workers publish cache events to NATS when blocks are created/removed\n",
+    "- Router subscribes to these events and maintains a global cache index\n",
+    "- Router uses this index to select workers with matching cached prefixes\n",
+    "- Result: Reduced prefill latency when cache hits occur\n",
     "\n",
     "### Understanding Multi-GPU/Multi-Node Benefits\n",
     "\n",
@@ -269,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e110c762",
+   "id": "7d8785bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d0958ab",
+   "id": "eef8e79b",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -295,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd11796",
+   "id": "d6057d03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4720fd53",
+   "id": "df4db37f",
    "metadata": {},
    "source": [
     "**What this enables:**\n",
@@ -335,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fb6c07",
+   "id": "a4125d99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a89dd31f",
+   "id": "c6f44dc9",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -365,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28eee4bb",
+   "id": "8f341bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32242467",
+   "id": "305103a8",
    "metadata": {},
    "source": [
     "---\n",
@@ -393,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb86141",
+   "id": "27abd0b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ffbbde",
+   "id": "8fcb447d",
    "metadata": {},
    "source": [
     "---\n",
@@ -435,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a0d38ea",
+   "id": "7ec958f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f128dc5c",
+   "id": "1a4dc131",
    "metadata": {},
    "source": [
     "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
@@ -474,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8253df0b",
+   "id": "98e1b038",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55cc7583",
+   "id": "51ae03de",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -511,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eefcd47",
+   "id": "26c4f4c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718c6a4f",
+   "id": "84c05e5f",
    "metadata": {},
    "source": [
     "---\n",
@@ -558,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e683ef",
+   "id": "ef8df712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37b56eca",
+   "id": "07c288c5",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -665,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e485b57",
+   "id": "6252b207",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b27642b",
+   "id": "cff02728",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -709,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a75adc",
+   "id": "e8b8584a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc9a282",
+   "id": "cc07d40a",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -748,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4d7be0a",
+   "id": "785fb298",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "205eb387",
+   "id": "9dee1cb5",
    "metadata": {},
    "source": [
     "---\n",
@@ -788,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b49c1f7",
+   "id": "de254317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e72ef40",
+   "id": "8999b4f4",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -856,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8625bacf",
+   "id": "82de3f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9140870",
+   "id": "9bf2a21b",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -890,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7d10a3d",
+   "id": "2cde3365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cbf69e8",
+   "id": "796afbcf",
    "metadata": {},
    "source": [
     "---\n",
@@ -989,39 +982,29 @@
     "### Performance Characteristics\n",
     "\n",
     "```bash\n",
-    "# Display performance comparison\n",
+    "# Display KV-aware routing characteristics\n",
     "cat <<'EOF'\n",
     "\n",
-    "Performance Impact of Distributed Dynamo:\n",
+    "KV-Aware Routing Benefits:\n",
     "\n",
-    "┌─────────────────────┬──────────────────┬──────────────┐\n",
-    "│ Metric              │ Single Node      │ Multi-Node   │\n",
-    "│                     │ (Multi-GPU)      │              │\n",
-    "├─────────────────────┼──────────────────┼──────────────┤\n",
-    "│ Cache Hit Rate      │ +10-20%          │ +20-40%      │\n",
-    "│ Latency (P50)       │ +2-5ms           │ +2-5ms       │\n",
-    "│ Latency (P99)       │ +5-10ms          │ +5-10ms      │\n",
-    "│ Throughput          │ Same to +10%     │ +30-60%      │\n",
-    "│ Memory Overhead     │ +100-200MB       │ +100-200MB   │\n",
-    "└─────────────────────┴──────────────────┴──────────────┘\n",
-    "\n",
-    "When Distributed Dynamo Helps Most:\n",
+    "When KV-Aware Routing Helps Most:\n",
     "  • Multiple GPUs or nodes with high traffic\n",
-    "  • Repeated queries (high cache hit potential)\n",
-    "  • Long context lengths (expensive to recompute)\n",
-    "  • Batch processing workloads\n",
+    "  • Repeated queries with shared prefixes (high cache hit potential)\n",
+    "  • Long context lengths (expensive to recompute prefills)\n",
+    "  • Batch processing workloads with similar prompts\n",
+    "  • Chatbots and conversational AI (repeated system prompts)\n",
     "\n",
     "When It May Not Help:\n",
-    "  • Single GPU deployments\n",
-    "  • Unique queries every time (low cache hit rate)\n",
-    "  • Very short context lengths\n",
-    "  • Real-time streaming with completely unique prompts\n",
+    "  • Single worker deployments (no routing decisions to make)\n",
+    "  • Completely unique queries every time (low cache hit rate)\n",
+    "  • Very short context lengths (cache overhead > savings)\n",
+    "  • Real-time streaming with entirely unique prompts\n",
     "\n",
     "Architecture Notes:\n",
-    "  • Grove = Kubernetes Operator (orchestration)\n",
-    "  • Dynamo = Serving Framework (actual inference)\n",
-    "  • NATS = Metadata/coordination (small messages)\n",
-    "  • NIXL = KV cache data transfer (large tensors via RDMA/TCP)\n",
+    "  • KV-Aware Routing = Router tracks cache state and makes placement decisions\n",
+    "  • NATS = Cache event coordination (workers publish, router subscribes)\n",
+    "  • Data Parallel = Multiple identical workers, each handles full inference\n",
+    "  • Local KV Cache = Each worker stores its own cache (no transfer between workers)\n",
     "EOF\n",
     "```\n",
     "\n",
@@ -1037,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cf9f71c",
+   "id": "fff959f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39641d4",
+   "id": "39e5f03a",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -1083,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2c738a3",
+   "id": "ac1969f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d975f9",
+   "id": "a8c75e48",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1111,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1638af45",
+   "id": "3d626cd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b87ca5",
+   "id": "3caa8b4f",
    "metadata": {},
    "source": [
     "---\n",
@@ -1167,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2fa6ed6",
+   "id": "a9101e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b647c790",
+   "id": "883effcf",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1199,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e19736",
+   "id": "10618855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "176662e3",
+   "id": "eb0384c4",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1232,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b82e0211",
+   "id": "8c256195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc3b7043",
+   "id": "24514d09",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1397,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3d73690",
+   "id": "790a108d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a63cd784",
+   "id": "672484a6",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1443,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44945672",
+   "id": "b25872c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38f76741",
+   "id": "6abbce76",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1486,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e140d4b2",
+   "id": "d180e9b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "443f6447",
+   "id": "a5d0c0a8",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1530,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2233c0e6",
+   "id": "15d00a18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bced03c",
+   "id": "eef57bad",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1591,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52745de2",
+   "id": "013a321e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1616,7 +1599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d4232c2",
+   "id": "63c7a9d2",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
@@ -1668,9 +1651,6 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
-  },
-  "language_info": {
-   "name": "python"
   }
  },
  "nbformat": 4,
